# ani-gui

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTRIBUTION.md  README.md  ani-gui  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
Formula/: ani-gui.rb
ani_gui/: __init__.py  docs.html  index.html  server.py
docs/: index.html
packaging/macos/: make-app.sh
